fix missing gap in forms

--- a/src/util/layout.css
+++ b/src/util/layout.css
@@ -70,7 +70,7 @@
 .row, .rows > * {
     display: table-row;
     
-    &:not(:last-child) > * {
+    &:not(:last-child):not([specificity-hack]) > * {
         margin-bottom: var(--gap);
     }
 
